 * Added the allele field to some variant viewLists.
 * Fixed the variant counts in the genes viewList.
 * Leaving the proxy_port empty during install, would cause it to be stored as 0
   instead of NULL in the database, this is now fixed.
 * Changed all implementations of `VariantOnGenome/DBID` so that it can only
   contain the DBID itself and nothing extra.




/*******************
 * 3.0 Beta 03
 * 2012-03-28
 *********/
 * Implemented PDO in all remaining lovd_queryDB() calls in check_update.php,
   class/object_columns.php, class/object_genes.php,
   class/object_genome_variants.php, class/object_individuals.php,
   class/object_phenotypes.php, class/object_screenings.php,
   class/object_users.php, diseases.php, inc-auth.php, inc-init.php,
   inc-lib-init.php, individuals.php, install/index.php, login.php, settings.php
   and setup.php.
 * Fixed bug; ViewLists without page controls could not be sorted anymore since
   Beta-02.
 * Finished correcting the stats calculations in check_update.php.
 * Fixed bug; When trying to assign Panel ID 0 to an individual, LOVD returned a
   query error.
 * Fixed bug; On slower machines, LOVD could run into the maximum execution time
   during installation.
 * Fixed bug; LOVDs which were not correctly installed, for instance because the
   configuration step was skipped, could not be uninstalled.
 * Fixed bug; LOVD 3.0 could not connect to external sources through a proxy
   server.
   Closes #3: "Allow LOVD to work behind a proxy".
   (thanks to Susan McCafferty, University of Glasgow, UK, for reporting)
   (thanks to Chris Watson, St. James's Univ. Hospital, Leeds, UK, for testing)
 * Fixed bug; When incorrect MySQL data was filled in the config.ini, LOVD would
   now show a correct error message on the screen.
 * Fixed bug; lovd_matchURL() didn't correctly parse the given URLs that could
   result in false positives or false negatives.
 * Fixed bug; The email sent after a submitter registers, did not contain a